Mapping av Person fra PDLF format til TPSF persondetaljer for DollyPersonCache